--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
@@ -20,34 +21,32 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/tvName"
-        android:layout_toStartOf="@id/tvDate"
         android:layout_margin="5dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
+        android:layout_toStartOf="@id/tvDate"
+        android:layout_toRightOf="@id/tvName"
         android:text="Tornadohl" />
 
     <TextView
         android:id="@+id/tvBody"
-        android:textColor="#050505"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvName"
+        android:layout_margin="5dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="5dp"
-        android:layout_margin="5dp"
         android:layout_marginBottom="5dp"
         android:layout_toRightOf="@id/ivProfileImage"
         android:autoLink="all"
         android:linksClickable="true"
+        android:textColor="#050505"
         android:textColorLink="#219CFD"
         tools:text="Cogito ergo sum" />
 
     <TextView
         android:id="@+id/tvName"
-        android:textColor="#050505"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
@@ -57,16 +56,28 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_toRightOf="@id/ivProfileImage"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#050505"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:layout_alignParentRight="true"
+        android:layout_margin="5dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="116dp"
         tools:text="time" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:layout_below="@id/tvBody"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="?android:attr/listDivider" />
 
 </RelativeLayout>
