--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -5,7 +5,10 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:onClick="Essai"
     android:layout_margin="5dp">
+
+
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -13,7 +16,6 @@
         android:layout_height="50dp"
         android:layout_margin="5dp"
         android:layout_marginStart="-1dp"
-        android:layout_marginTop="0dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
